[project]
name = "flet-map"
version = "0.2.0"
description = "Map control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/map"
Repository = "https://github.com/flet-dev/flet-map"
Issues = "https://github.com/flet-dev/flet-map/issues"

[tool.setuptools.package-data]
"flutter.flet_map" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "flet-web",
    #"mkdocs",
    #"mkdocs-material",
    #"mkdocstrings[python]"
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
flet = { path = "/Users/ndonkohenri/PycharmProjects/flet-dev/flet/sdk/python/packages/flet", editable = true }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
